@@ -27,7 +27,7 @@
     </div>
     <div id='column2'>
       <form>
-        <div><input class='indented_input' type='text' name='login_name'><br/></div>
+        <div><input class='indented_input' type='text' name='login'><br/></div>
         <div><input class='indented_input' type='password' name='password'><br/></div>
         <div id='login_button'><b><input type="submit" value="Login" /></b></div>
       </form>
